--- a/templates/pages/error-page.html
+++ b/templates/pages/error-page.html
@@ -1,6 +1,10 @@
 {% extends 'layout/base.html' %} {% set page = "error-page" %} {% block content %}
 <div class="container error-page-main">
+    {% if page_title == 'Error 404' %}
     <h1 class="hidden">Error 404</h1>
+    {% else %}
+    <h1 class="hidden">Error 505</h1>          
+    {% endif %}          
     <div class="error-box">
         {% if page_title == 'Error 404' %}
         <h2 class="error-page-title">404</h2>
