Unused anchor tag removed

--- a/templates/components/cards/recipe-card.html
+++ b/templates/components/cards/recipe-card.html
@@ -40,7 +40,7 @@
         </h5>
         <!-- card bottom section -->
         <div class="card-bottom-section">
-            <button class="none-button edit-recipe" onclick="window.location.href='{{url_for('edit_recipe',recipe_id = recipes_user['_id'])}}';"><a href="" class=""></a>Edit</button>
+            <button class="none-button edit-recipe" onclick="window.location.href='{{url_for('edit_recipe',recipe_id = recipes_user['_id'])}}';">Edit</button>
             <button class="none-button remove-recipe" onclick="window.location.href='{{url_for('remove_recipe',recipe_id = recipes_user['_id'])}}';">
                     <i class="fas fa-trash-alt"></i>
                 </button>
