--- a/scss/page-styles/account.scss
+++ b/scss/page-styles/account.scss
@@ -23,6 +23,8 @@
 .info-label-result {
     margin-top: 10px;
     font-size: 14px;
+    color: #000;
+    font-weight: 300;
 }
 
 .remove-account {
