Quick fix - login button style changed to main button style

--- a/scss/page-styles/favourites.scss
+++ b/scss/page-styles/favourites.scss
@@ -5,6 +5,9 @@
         $b: 400px;
         min-height: calc(#{$a} - #{$b});
     }
+    .main-button{
+        width: 150px;
+    }
 }
 
 .redicret-message {
