--- a/scss/page-styles/add-recipe.scss
+++ b/scss/page-styles/add-recipe.scss
@@ -131,14 +131,14 @@
 .main-button-small {
     width: 150px;
     background: $main-button-bg;
-    color: #51acea;
-    border: 1px solid #51acea;
+    color: #1DB0B5;
+    border: 1px solid #1DB0B5;
 
     &:hover,
     &:focus {
-        background: linear-gradient(to bottom, #51acea, #2e60eb);
+        background: linear-gradient(to bottom, #1DB0B5, #189599);
         color: $main-button-color-hv;
-        border: 1px solid #51acea;
+        border: 1px solid #1DB0B5;
     }
 }
 
