--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -59,9 +59,9 @@
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body extra-padding">
                         <ul class="have-fun-rules">
-                            <li class="rule-link">Rule 1: Have fan!</li>
-                            <li class="rule-link">Rule 2: Have fan!</li>
-                            <li class="rule-link">Rule 3: Have fan!</li>
+                            <li class="rule-link">Rule 1: Have fun!</li>
+                            <li class="rule-link">Rule 2: Have fun!</li>
+                            <li class="rule-link">Rule 3: Have fun!</li>
                         </ul>
                     </div>
                 </div>
