User recipes card links color style changed

--- a/scss/page-styles/your-recipes.scss
+++ b/scss/page-styles/your-recipes.scss
@@ -24,10 +24,10 @@
 
 .edit-recipe {
     text-align: right;
-    color: #51ACEA;
+    color: #1DB0B5;
 
     &:hover {
-        color: #C471EB;
+        color: #FF3377;
     }
 }
 
