--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1637,6 +1637,20 @@ form p {
   min-height: calc(100% - 400px);
 }
 
+.recipe-photo {
+  display: inherit;
+  justify-content: center;
+  text-align: center;
+  padding-top: 10px;
+}
+.recipe-photo img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 2px solid #FFF;
+  box-shadow: 0px 0px 5px 1px #ccc;
+}
+
 .recipe-title {
   text-transform: capitalize;
 }
