Headers style changed, preparation step headers style changed

--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -24,3 +24,13 @@
 .recipe-title {
     text-transform: capitalize;
 }
+
+.second-title {
+    color: #FF3377;
+    font-size: 1.4rem;
+}
+
+.step-title {
+    color: #000;
+    font-size: 1rem;
+}
