--- a/templates/pages/recipe-page.html
+++ b/templates/pages/recipe-page.html
@@ -38,7 +38,7 @@
             <h3 class="second-title">Preparation steps :</h3>
             {% for element in preparation %}
             <div class="prep-container">
-                <h4 class="second-title">Step {{preparation.index(element) + 1}}</h4>
+                <h4 class="step-title">Step {{preparation.index(element) + 1}}</h4>
                 <p class="prep-step">{{element}}</p>
             </div>
             {% endfor %}
