--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1655,4 +1655,14 @@ form p {
   text-transform: capitalize;
 }
 
+.second-title {
+  color: #FF3377;
+  font-size: 1.4rem;
+}
+
+.step-title {
+  color: #000;
+  font-size: 1rem;
+}
+
 /*# sourceMappingURL=style.css.map */
