--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -32,7 +32,7 @@
 
 .second-title {
     color: #FF3377;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-bottom: 20px;
 }
 
@@ -44,4 +44,10 @@
     color: #000;
     font-size: 1rem;
     font-style: italic;
+}
+
+
+.main-ingredient, .prep-step, .add-tip{
+    font-weight: 300;
+    font-size: 0.9rem;
 }
