Difficulty level style applied

--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -21,7 +21,22 @@
     }
 }
 
-.separate-line{
+.difficulty-info {
+    font-size: 1.2rem;
+    color: #FF3377;
+
+    span {
+        font-size: 1rem;
+        margin-left: 10px;
+        padding: 5px 10px 5px 10px;
+        background-color: #1DB0B5;
+        border-radius: 15px;
+        color: #FFF;
+        font-weight: 400;
+    }
+}
+
+.separate-line {
     border-color: #FF3377;
     opacity: 0.2;
 }
@@ -36,7 +51,7 @@
     margin-bottom: 20px;
 }
 
-.prep-container{
+.prep-container {
     padding-bottom: 20px;
 }
 
@@ -47,7 +62,9 @@
 }
 
 
-.main-ingredient, .prep-step, .add-tip{
+.main-ingredient,
+.prep-step,
+.add-tip {
     font-weight: 300;
     font-size: 0.9rem;
 }
