--- a/templates/pages/recipe-page.html
+++ b/templates/pages/recipe-page.html
@@ -22,7 +22,10 @@
             </div>
             <div class="prepare-info">
                 <p class="time-info">{{this_recipe['time']}}</p>
-                <p class="difficulty-info">{{this_recipe['difficulty']}}</p>
+                <h3 class="difficulty-info">
+                    <i class="fas fa-align-right"></i>
+                    Difficulty Level
+                <span>{{this_recipe['difficulty']}}</span></h3>
             </div>
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-12">
