--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -5,6 +5,10 @@
         $b: 400px;
         min-height: calc(#{$a} - #{$b});
     }
+    
+    .page-title{
+        padding: 0;
+    }
 }
 
 .recipe-photo {
@@ -21,9 +25,23 @@
     }
 }
 
+.time-info{
+    font-size: 1.2rem;
+    
+    span{
+        font-size: 1rem;
+        margin-left: 10px;
+        padding: 5px 10px 5px 10px;
+        background-color: #1DB0B5;
+        border-radius: 15px;
+        color: #FFF;
+        font-weight: 400;
+    }
+}
+
 .difficulty-info {
     font-size: 1.2rem;
-    color: #FF3377;
+    color: #000;
 
     span {
         font-size: 1rem;
