--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -9,6 +9,21 @@
     .page-title {
         padding: 0;
     }
+
+    .hate-love:hover span {
+        display: none;
+    }
+    .hate-love:hover:before {
+        content: "You hate me"
+    }
+}
+
+.top-recipe-section {
+    padding: 20px 0;
+}
+
+.top-info {
+    margin-left: -30px;
 }
 
 .recipe-photo {
