--- a/scss/page-styles/recipe-page.scss
+++ b/scss/page-styles/recipe-page.scss
@@ -73,6 +73,16 @@
     }
 }
 
+.favourite-link {
+    padding-bottom: 15px;
+    color: #000;
+}
+
+.card-fav-icon {
+    font-size: 1.125rem;
+    font-weight: 500;
+}
+
 .separate-line {
     border-color: #FF3377;
     opacity: 0.2;
